src/objects/Integration_Errors__c.object
<CustomObject>
    <fields>
        <fullName>ETL_Workflow_Id__c</fullName>
        <label>ETL Workflow Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalID_UniqueKey_FieldName__c</fullName>
        <label>External ID / UniqueKey FieldName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID_UniqueKey_Value__c</fullName>
        <label>External ID / UniqueKey Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceObjectName__c</fullName>
        <label>Salesforce Object Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Table_Name__c</fullName>
        <label>Source Table Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Integration Errors</label>
    <nameField>
        <label>Integration Errors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>